2002-07-22  Dominik Reichardt  <dominus@users.sourceforge.net>
	* README.Qtopia : added instructions by Artaxerxes on how
	  to compile Exult for the Zaurus PDA.

2002-07-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* exult.cc: pass key releases to the action handler too
	* keyactions.*: added ActionWalk* functions
	* keys.*: implemented mapping for key release
	* data/bg/defaultkeys.txt data/si/defaultkeys.txt: added walking
	  via arrows and remapped scrolling to alt-arrow

2002-07-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/islefaq/usecode.uc: fixed some typos and spacing

2002-07-22  Ryan Nunn <triforc@merlin.net.au>
	* gumps/Gump_manager.cc, gumps/Spellbook_gump.cc, usecode/ucinternal.cc:
	  std stuff.
	* msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h : Just enabled OpenGL
	  for myself.
	* shapes/glshape.cc : Disabled Depth Writing and Testing (see inline
	  note). Enabled Texture Clamping (vs wrapping) to clean up the output
	  a bit. Added a note about Alpha Blending (no code change though).

2002-07-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* glshape.h: dummy GL_manager class
	* exult.cc, gamewin.cc, mouse.h: include glshape.h
	* configure.in, Makefile.am: --enable-opengl

2002-07-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* mouse.h: #ifdef HAVE_OPENGL was missing around call to GL stuff

2002-07-21  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/conversation.cc (Conversation): Still a bit rough, but
	Conversation::paint() no repaints the whole conversation in its
	current state.

	* gumps/Newfile_gump.cc (Newfile_gump): Fixed crash I caused.
	* exult.cc, etc:  Get_click takes a Paintable parameter.

	* drag.cc,gamerend.cc:  Dragging_info::paint() added.

2002-07-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mouse.cc,font.cc,etc.:  More things kind-of work in OpenGL
	(though mouse doesn't clean up after itself and conversation text
	disappears, so there's LOTs to fix.)
